--- a/alura-plus/index.html
+++ b/alura-plus/index.html
@@ -12,7 +12,9 @@
     </head>
 
     <body>
-     <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-     <img src="img/Combo.png" alt="O combo+ é junção do alura+ e o alura linguá">
+     <section>
+        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único</h1>
+        <img src="Combo.png" alt="O combo+ é junção do alura+ e o alura linguá">
+     </section>
     </body>
 </html>
